deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-app-in-eap-on-ocp
  name: web-app-in-eap-on-ocp
  namespace: eap-ocp
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: web-app-in-eap-on-ocp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: web-app-in-eap-on-ocp
    spec:
      containers:
      - image: web-app-in-eap-on-ocp:1.0
        name: web-app-in-eap-on-ocp
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
      restartPolicy: Always
