route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: web-app-in-eap-on-ocp
  name: web-app-in-eap-on-ocp
  namespace: eap-ocp
spec:
  host: web-app-in-eap-on-ocp-eap-ocp.apps.cluster-fvw6c.fvw6c.sandbox1281.opentlc.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: web-app-in-eap-on-ocp
    weight: 100
  wildcardPolicy: None
